# fty-logger

./: CMakeLists.txt  README.md
fty/: logger.h
src/: logger.cpp  logger.cpp.autosave
test/: CMakeLists.txt  log.cpp  main.cpp
test/conf/: test-config.conf
